# air-quality-challenge-zindi

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1. Air quality_preprocessing_scrap_meteo.ipynb
